--- a/css/default.css
+++ b/css/default.css
@@ -64,7 +64,7 @@ main .square {
   background-color: #f4f4f4;
   border: none;
   transition-duration: 200ms;
-  font-size: 3.5rem;
+  font-size: min(3rem, 10vw);
 }
 main .square:active.clickable {
   background-color: #36363650;
