--- a/scss/default.scss
+++ b/scss/default.scss
@@ -1,10 +1,10 @@
 $main-width: 90vw;
 $grid-width: 0.8 * $main-width;
 
-$main-background-colour: #aaaaaaa6;
-$square-colour: #fdca88;
-$square-hover-colour: #8d8d8d33;
-$square-active-colour: #36363650;
+$main-background-colour: #aaaaaa;
+$square-colour: #ffffff;
+$square-hover-colour: #d3d3d3;
+$square-active-colour: #747474;
 
 @font-face {
   font-family: "Shadows into Light";
@@ -27,6 +27,7 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
+  background-color: #f6f6f6;
 }
 
 main {
@@ -39,7 +40,8 @@ main {
   align-items: center;
   background-color: $main-background-colour;
   border-radius: 1ch;
-  background: linear-gradient(145deg, #fff, #e1e1e1);
+  // background: linear-gradient(145deg, #fff, #e1e1e1);
+  background-color: #f6f6f6;
   box-shadow: 32px 32px 70px #b9b9b9, -32px -32px 70px #fff;
 
   #logo {
@@ -107,9 +109,6 @@ main {
   .buttonpanel {
     button:hover {
       filter: brightness(0.9);
-    }
-    button:active {
-      filter: brightness(0.6);
     }
   }
 }
