--- a/scss/default.scss
+++ b/scss/default.scss
@@ -40,7 +40,6 @@ main {
   align-items: center;
   background-color: $main-background-colour;
   border-radius: 1ch;
-  // background: linear-gradient(145deg, #fff, #e1e1e1);
   background-color: #f6f6f6;
   box-shadow: 32px 32px 70px #b9b9b9, -32px -32px 70px #fff;
 
@@ -89,8 +88,9 @@ main {
   .buttonpanel {
     button {
       border: none;
-      background: none;
+      background: transparent;
       transition-duration: 200ms;
+      margin: 0 1rem;
     }
   }
 
@@ -100,6 +100,9 @@ main {
 }
 
 @media screen and (min-width: 768px) {
+  html {
+    font-size: 1.2rem;
+  }
   main button.square:hover.clickable {
     background-color: $square-hover-colour;
   }
