--- a/scss/default.scss
+++ b/scss/default.scss
@@ -76,7 +76,7 @@ main {
   .square {
     margin: 5px;
     background-color: $square-colour;
-    border: none;
+    border: 2px solid #ddd;
     transition-duration: 200ms;
     font-size: min(3rem, 10vw);
     border-radius: 0.5ch;
