--- a/scss/default.scss
+++ b/scss/default.scss
@@ -86,11 +86,15 @@ main {
   }
 
   .buttonpanel {
+    display: flex;
+    justify-content: space-around;
+    width: 40ch;
+    max-width: 80%;
+
     button {
       border: none;
       background: transparent;
       transition-duration: 200ms;
-      margin: 0 1rem;
     }
   }
 
